# libaudioplugin

./: CMakeLists.txt  README.md
.github/workflows/: linux.yaml  macos.yaml  windows.yaml
cmake/modules/: PluginBuild.cmake  PluginConfigure.cmake  PluginDeploy.cmake  PluginFetch.cmake  PluginParse.cmake
cmake/templates/: auv2info.plist  oldwin32resource.rc  win32resource.rc
demo/: CMakeLists.txt
demo/source/: demo.cpp
doc/: CMakeLists.txt
example/: CMakeLists.txt  example.cpp
example/source/: myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h  version.h
include/audioplugin/: audioplugin.hpp
include/audioplugin/core/: process.hpp  register.hpp  state.hpp  verify.hpp  view.hpp
include/audioplugin/glue/: backend.hpp  backend.inl  detection.hpp  entry.hpp  factory.hpp  frontend.hpp  open.hpp  plugids.hpp  pluginfo.h  pluginfo.hpp
include/libaudioplugin/: libaudioplugin.hpp  libplugin.fwd
include/libplugin/: libplugin.fwd  libplugin.hpp  pluginfo.h
libplugin/: CMakeLists.txt
libplugin/include/libplugin/: libplugin.fwd  libplugin.hpp
libplugin/include/libplugin/core/: parameters.hpp
libplugin/include/libplugin/glue/: detection.hpp
libplugin/include/libplugin/wrapper/: controller.hpp  controller.inl  processor.hpp  processor.inl  version.hpp  vstids.hpp
libplugin/resource/: win32resource.rc
libplugin/source/: libplugin.cpp
libplugin/source/wrapper/: cids.hpp  controller.cpp  controller.hpp  entry.cpp  processor.cpp  processor.hpp  version.hpp
resource/: win32resource.rc
source/: validate.cpp
source/aax/: env.cpp  env.hpp
source/glue/: step.cpp
source/steps/vst2/: mystep.cpp
source/vst2/: env.cpp  env.hpp  flags.cpp
test/: CMakeLists.txt
test/source/: test.cpp
